# agent-commerce-framework

./: .deliveryignore  .dockerignore  .env.example  .gitignore  AGENTICTRADE_EVALUATION.json  CHANGELOG.md  Dockerfile  EVALUATION_SUMMARY.md  QA_REPORT_MIM-371.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: deps.py  main.py  middleware.py
cli/: __main__.py  drip_sender.py  manage.py
data/: ta_eval_scores.txt
docs/: API_REFERENCE.md  COINSIFTER_API.md  COMPLIANCE_ROADMAP.md  IR_DECK.md  IR_DECK_zh-TW.md  PRODUCT_SPEC.md  PROVIDER_GUIDE.md  QA_PROVIDER_DOCS.md  TA_OVERNIGHT_SUMMARY.md  TA_REPORT_AGENT_PROVIDER.md  TA_REPORT_MULTI_MODEL.md  TA_REPORT_ROUND10.md  TA_REPORT_ROUND11.md  TA_REPORT_ROUND12.md  TA_REPORT_ROUND13.md  TA_REPORT_ROUND14.md  TA_REPORT_ROUND15.md  TA_REPORT_ROUND16.md  TA_REPORT_ROUND17.md  TA_REPORT_ROUND18.md  TA_REPORT_ROUND19.md  TA_REPORT_ROUND20.md  TA_REPORT_ROUND21.md  TA_REPORT_ROUND22.md  TA_REPORT_ROUND23.md  TA_REPORT_ROUND24.md  TA_REPORT_ROUND25.md  TA_REPORT_ROUND26.md  TA_REPORT_ROUND27.md  TA_REPORT_ROUND28.md  TA_REPORT_ROUND29.md  TA_REPORT_ROUND30.md  TA_REPORT_ROUND31.md  TA_REPORT_ROUND32.md  TA_REPORT_ROUND33.md  TA_REPORT_ROUND4.md  TA_REPORT_ROUND5.md  TA_REPORT_ROUND6.md  TA_REPORT_ROUND7.md  TA_REPORT_ROUND8.md  (+5 more)
examples/: agent_buys_api.py  check_analytics.py  consume_service.py  multi_agent_trade.py  payment_flow.py  quickstart.py  register_service.py  team_setup.py  two_agents_trading.py  webhook_listener.py
landing/: copy.ko.md  copy.md  copy.zh-TW.md
marketing/: MARKETING_PLAN.md  README.md  blog_outline_zh.md  x_thread_en.md  x_thread_zh.md
marketplace/: __init__.py  agent_provider.py  audit.py  auth.py  commission.py  compliance.py  db.py  discovery.py  drip_email.py  escrow.py  health_monitor.py  i18n.py  identity.py  milestones.py  models.py  payment.py  platform_consumer.py  provider_auth.py  proxy.py  rate_limit.py  referral.py  registry.py  report.py  reputation.py  service_review.py  settlement.py  sla.py  velocity.py  wallet.py  webhooks.py
mcp-server/: Dockerfile  LICENSE  README.md  llms-install.md  pyproject.toml  server.json  smithery.yaml
mcp-server/src/agentictrade_mcp/: __init__.py  client.py  server.py
mcp-server/tests/: test_client.py  test_server.py
mcp_bridge/: __init__.py  discovery.py  server.py
migrations/: runner.py
payments/: __init__.py  agentkit_provider.py  base.py  nowpayments_provider.py  paypal_provider.py  router.py  stripe_acp.py  x402_provider.py
sdk/: __init__.py  buyer.py  client.py
seed/: coinsifter_api.py  demo_data.py  register_backtest.py  register_coinsifter.py
starter-kit/: README.md
teamwork/: __init__.py  agent_config.py  orchestrator.py  quality_gates.py  task_router.py  templates.py
templates/: api-docs.html  checkout-success.html  dashboard.html  marketplace.html  starter-kit-product.html
tests/: conftest.py  test_admin.py  test_agent_provider.py  test_agentkit_provider.py  test_audit.py  test_auth.py  test_batch_api.py  test_billing.py  test_billing_race.py  test_coinsifter_integration.py  test_commission.py  test_dashboard.py  test_dashboard_providers.py  test_db_pool.py  test_discovery.py  test_drip_email.py  test_drip_sender.py  test_email.py  test_escrow.py  test_founding_seller.py  test_health_endpoint.py  test_identity.py  (+30 more)
(+120 files in other folders)
