[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-commerce-framework"
version = "0.4.0"
description = "Production-ready agent-to-agent marketplace with payments, identity, reputation, and team management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "JudyAI Lab"}
]
keywords = ["agent", "marketplace", "a2a", "payments", "x402", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "pyjwt>=2.8.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
x402 = ["x402[fastapi]>=2.0.0", "x402[evm]>=2.0.0"]
cdp = ["cdp-sdk>=0.12.0"]
stripe = ["stripe>=8.0.0"]
mcp = ["mcp>=1.0.0"]
all = ["agent-commerce-framework[x402,cdp,stripe,mcp]"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
acf = "cli.manage:main"

[project.urls]
Homepage = "https://agentictrade.io"
Documentation = "https://agentictrade.io/api-docs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["api", "marketplace", "payments", "teamwork", "mcp_bridge", "sdk", "cli", "seed"]
